--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ blockquote {
 
 #footer {
     border-top: 1px solid #9c9c9c;
-    padding: 45px 0px 75px 0;
+    padding: 35px 0px 35px 0;
     color: #000;
 }
 .social {
@@ -739,7 +739,7 @@ blockquote {
 .navbar-default {background-color: white;  border-bottom: 1px solid rgb(156, 156, 156);}
 .navbar-default .navbar-nav>li>a {color: #000;}
 .clear {clear: both;}
-.nav_bar_service .navbar-nav li a {  color: #000;  font-weight: bold;  /*text-transform: uppercase;  /* word-spacing: 5px; */}
+.nav_bar_service .navbar-nav li a {color: #000; font-weight: bold; text-transform: uppercase;  /* word-spacing: 5px; */}
 .nav_bar_service .navbar-nav li a:hover{border-bottom: 5px solid #3988FF; color: #000;transition: all 100ms; }
 .active_li {border-bottom: 5px solid #3988FF;}
 #show_all_number {display: none;  background-color: #fff; }
